feat: family TV 2.1.0 usability and stability